--- a/src/app.css
+++ b/src/app.css
@@ -17,8 +17,8 @@ body {
   height: 100%;
 }
 
-#root{
-    height: 100%;
+#root {
+  height: 100%;
 }
 
 .container {
@@ -50,6 +50,12 @@ a {
   color: #4f4f4f;
   text-align: right;
   position: relative;
+  cursor: pointer;
+}
+
+.btn-random:hover,
+.btn-random:focus {
+  opacity: 0.7;
 }
 
 .btn-random div {
@@ -59,7 +65,7 @@ a {
 
 .btn-random svg {
   position: absolute;
-  top: 0.4rem;
+  top: 0.3rem;
 }
 
 footer {
