--- a/src/components/singlequote.css
+++ b/src/components/singlequote.css
@@ -4,7 +4,7 @@
 
 .single--quote {
   font-weight: 500;
-  font-size: 36px;
+  font-size: 2.4rem;
   line-height: 120%;
   border-left: 8px solid #f7df94;
   padding-left: 2rem;
@@ -41,7 +41,7 @@
 
 .single--author {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 2rem;
   line-height: 28px;
 
   color: #4f4f4f;
@@ -49,7 +49,7 @@
 
 .single--genre {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 1.2rem;
   line-height: 16px;
   margin-top: 1rem;
   color: #828282;
@@ -58,6 +58,15 @@
 @media (min-width: 600px) {
   .single--quote {
     padding-left: 5rem;
+    font-size: 3.6rem;
+  }
+
+  .single--author {
+    font-size: 24px;
+  }
+  
+  .single--genre {
+    font-size: 14px;
   }
 
   .single--extra {
