--- a/src/components/authorquotes.css
+++ b/src/components/authorquotes.css
@@ -13,11 +13,26 @@
   padding-left: 2rem;
 }
 
-@media (min-width: 600px) {
+.multiple--quote p{
+    margin: 1rem 0;
+  }
 
-    .multiple {
-        gap: 7rem;
-      }
+.multiple h2 {
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 120%;
+  padding-left: 2rem;
+}
+
+@media (min-width: 600px) {
+  .multiple {
+    gap: 7rem;
+  }
+
+  .multiple h2 {
+    font-size: 3.5rem;
+    padding-left: 5rem;
+  }
 
   .multiple--quote {
     padding-left: 5rem;
